tests/checker/ok/commutative_canonical_receiver.can
Greeting = String

Name = String

greet = (Greeting * Name) => Greeting {
    Greeting
}

main = () => Unit {
    "hello"
        -> Greeting
        .greet("world" -> Name)
    "ok" -> Print
}
